--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: my_flutter_app
-description: A new Flutter project.
+description: A high-performance VRM application for viewing and manipulating 3D models.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -31,10 +31,21 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # Unity集成，用于展示VRM模型
-  flutter_unity_widget: ^2022.1.0
-
-
+  # 基础状态管理
+  provider: ^6.0.5
+  
+  # 文件操作和网络
+  http: ^0.13.6
+  path_provider: ^2.1.1
+  
+  # UI组件
+  cached_network_image: ^3.2.3
+  shimmer: ^3.0.0
+  
+  # 工具类
+  json_annotation: ^4.8.1
+  uuid: ^3.0.7
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -49,6 +60,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -62,7 +75,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/models/
+    - assets/textures/
+    - assets/animations/
+    - assets/ui/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -77,7 +94,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
+        - asset: assets/fonts/Roboto-Bold.ttf
+          weight: 700
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
